# codebase-qa-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/evals/: gold_set.yaml  refusal_set.yaml  run_retrieval_eval.py
backend/evals/reports/: retrieval_flask.md
backend/scripts/: restore_index.sh  snapshot_index.sh
backend/src/: agent.py  cache.py  chunks.py  cli.py  config.py  detect.py  embed.py  extract.py  index.py  retrieve.py  server.py  store.py  summarize.py  tools.py
backend/src/adapters/: base.py  python.py
backend/src/routes/: chat.py  files.py  health.py  repos.py  search.py  sessions.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Chat.tsx  CitationBadge.tsx  CitationPanel.tsx  Message.tsx  RepoSelector.tsx  SessionSidebar.tsx  ThinkingTrace.tsx
frontend/lib/: api.ts  types.ts
