[project]
name = "codebase-qa-agent"
version = "0.1.0"
description = "Agentic Q&A over a public GitHub codebase"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    # Step 2 — tree-sitter chunker
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.25.0",
    "click>=8.1.0",
    # Step 3 — Weaviate v4 client
    "weaviate-client>=4.9.0",
    "packaging>=24.0",   # transitive of weaviate-client; not in python:slim
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
