[project]
name = "codebase-qa-agent"
version = "0.1.0"
description = "Agentic Q&A over a public GitHub codebase"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    # Step 2 — tree-sitter chunker
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.25.0",
    "click>=8.1.0",
    # Step 3 — Weaviate v4 client
    "weaviate-client>=4.9.0",
    "packaging>=24.0",   # transitive of weaviate-client; not in python:slim
    # Step 4 — LLM providers (embedding + summary) with cache
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-huggingface>=0.1.0",  # wraps sentence-transformers (heavy: ~1.5GB)
    "sentence-transformers>=3.0.0",
    # Step 5 — full indexing pipeline progress bars
    "tqdm>=4.66.0",
    # Step 7 — LangGraph agent + tools + sqlite checkpointer
    "langgraph>=0.6.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "aiosqlite>=0.20.0",
    # Step 7b — LangChain V1 umbrella for canonical create_agent +
    # init_chat_model. Replaces deprecated langgraph.prebuilt.create_react_agent.
    "langchain>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
